[Password Manager] Don't provisionally save password before submission, save on user input

Before this CL, WillSendSubmitEvent was called before submission. The method provisionally saved username/password values in case Javescript modifies them on submission. It is not needed anymore because we track all user/autofill changes in PasswordAutofillAgent::UpdateStateForTextChange.

Moreover, if a user has already saved credential with manual fallback, the submission should be ignored (no prompt is needed). In other words, a submission may not cause (provisional) saving.

Bug: 767861, 725883
Change-Id: I0e7b2095f396f418263fd86f1a426131f26ed38d